deployment/sts-api-gateway-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sts-api-gateway
spec:
  selector:
    app: api-gateway
  ports:
  - name: http
    port: 8080
  type: ClusterIP
